Enhanced UX: auto-focus on answer input, added loading message during fun facts, and displayed quiz completion time

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,9 @@
 <!-- LOADING SCREEN -->
 <section id="loading-screen" class="hidden loading">
 
-  <h2>🤖 Preparing Fun Fact...</h2>
+  <h2>🚀 Getting your quiz ready!</h2>
+  <p>Enjoy a fun fact while we prepare your questions 😊</p>
+
 
   <div id="fun-fact-box">
     <h3>🌟 Fun Fact</h3>
