updated the playagain button logic

--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,9 @@
   <h2 id="final-score"></h2>
   <h3 id="time-taken"></h3>
   <div id="review-section"></div>
-  <button onclick="location.reload()">Play Again</button>
+  <button onclick="playAgain()">Play Again</button>
 </section>
+
 
 <!-- COMING SOON -->
 <section id="coming-soon" class="hidden coming">
