updated the code to accept text instead of number now the input box will accept both text as well numbers

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
   <h2 id="question"></h2>
 
   <div class="quiz-controls">
-    <input type="number" id="answer" placeholder="Your answer">
+    <input type="text" id="answer" placeholder="Your answer">
     <button id="submit-btn" onclick="submitAnswer()">Submit</button>
   </div>
 
@@ -71,8 +71,8 @@
   <h3 id="time-taken"></h3>
   <div id="review-section"></div>
   <button onclick="playAgain()">Play Again</button>
-</section>
 
+</section>
 
 <!-- COMING SOON -->
 <section id="coming-soon" class="hidden coming">
